# PG_Tarefas

./: README.md
Tarefa_M4/: Sprite.cpp  src.cpp
Tarefa_M4/includes/shader/: Sprite.h
Tarefa_M4/shaders/: retangulo.fs  retangulo.vs
Tarefa_M5/: CMakeLists.txt  Sprite.cpp  src.cpp
Tarefa_M5/includes/shader/: Shader.h  Sprite.h
Tarefa_M5/shaders/: HelloTriangle.fs  HelloTriangle.vs
